Updated and Added files
Updated anxietyinfo.html filename and added anxiety_coping_methods.html
Reformatted HTML in anxiety_info.html and filled
anxiety_coping_methods.html with anxiety coping methods.

--- a/src/anxiety_info.html
+++ b/src/anxiety_info.html
@@ -46,12 +46,14 @@
                     <li>Social Anxiety Disorder</li>
                 </ul>
             </section>
-            <h4>Sources</h4>
-            <ul>
-                <li><a href="https://www.apa.org/topics/anxiety/">Anxiety</a> - American Psychiatric Association</li>
-                <li><a href="https://www.nimh.nih.gov/health/topics/anxiety-disorders/index.shtml">Anxiety Disorders</a> - National Institue of Mental Health</li>
-                <li><a href="https://www.hhs.gov/answers/mental-health-and-substance-abuse/what-are-the-five-major-types-of-anxiety-disorders/index.html">What are the five major types of anxiety disorders?</a> - U.S. Department of Health and Human Services</li>
-            </ul>
+            <section>
+                <h4>Sources</h4>
+                <ul>
+                    <li><a href="https://www.apa.org/topics/anxiety/">Anxiety</a> - American Psychiatric Association</li>
+                    <li><a href="https://www.nimh.nih.gov/health/topics/anxiety-disorders/index.shtml">Anxiety Disorders</a> - National Institue of Mental Health</li>
+                    <li><a href="https://www.hhs.gov/answers/mental-health-and-substance-abuse/what-are-the-five-major-types-of-anxiety-disorders/index.html">What are the five major types of anxiety disorders?</a> - U.S. Department of Health and Human Services</li>
+                </ul>
+            </section>
         </article>
     </body>
 </html>
