--- a/src/depression_coping_methods.html
+++ b/src/depression_coping_methods.html
@@ -31,48 +31,28 @@ body, html {
 <div class="parallax"></div>
 
 <div style="height:1000px;background-image: linear-gradient(to right,#ABFFE7,#B4FFAB) ;font-size:36px">
-A lot of people in this world suffer from depression symptoms. However sometimes it is hard to identify the signs.Check the boxex bellow to see what you have bee recently experiensing. Ask yourself, do you feel any of the following:
-    <div class="sequencer__node" data-index="10">
-<div class="sequencer__drum" data-drum="B">
-        <input type="checkbox" class="sequencer__nodeActive" />
-            <label>Oversleeping or not sleeping enough</label>
+A lot of people in this world suffer from depression symptoms. However sometimes it is hard to identify the signs.Check the boxex bellow to see what you have bee recently experiensing. Ask yourself, do you feel any of the following:<br>
     
-    <div class="sequencer__node" data-index="10">
-<div class="sequencer__drum" data-drum="B">
-        <input type="checkbox" class="sequencer__nodeActive" />
-            <label>Inappropriate food consumption</label>
-        <div class="sequencer__node" data-index="10">
-<div class="sequencer__drum" data-drum="B">
-        <input type="checkbox" class="sequencer__nodeActive" />
-            <label>Mood swings </label>
-        <div class="sequencer__node" data-index="10">
-<div class="sequencer__drum" data-drum="B">
-        <input type="checkbox" class="sequencer__nodeActive" />
-            <label>Fatigue</label>
-        <div class="sequencer__node" data-index="10">
-<div class="sequencer__drum" data-drum="B">
-        <input type="checkbox" class="sequencer__nodeActive" />
-            <label>Forced happiness</label>
-        <div class="sequencer__node" data-index="10">
-<div class="sequencer__drum" data-drum="B">
-        <input type="checkbox" class="sequencer__nodeActive" />
-            <label>Hard time to consentrate on the task</label>
-        <div class="sequencer__node" data-index="10">
-<div class="sequencer__drum" data-drum="B">
-        <input type="checkbox" class="sequencer__nodeActive" />
-            <label>Angry or irritable</label>
-            <div class="sequencer__node" data-index="10">
-<div class="sequencer__drum" data-drum="B">
-        <input type="checkbox" class="sequencer__nodeActive" />
-            <label>Use of drugs and alcohol</label>
-     <div class="sequencer__node" data-index="10">
-<div class="sequencer__drum" data-drum="B">
-        <input type="checkbox" class="sequencer__nodeActive" />
-            <label>Having thoughts of harming yoursel or others</label>
-     <div class="sequencer__node" data-index="10">
-<div class="sequencer__drum" data-drum="B">
-        <input type="checkbox" class="sequencer__nodeActive" />
-            <label>Having thoughts of killing yourself</label>
+<input type="checkbox" name="symptoms0" value="mood">
+<label for="symptoms0">Mood swings </label><br>
+<input type="checkbox" name="symptoms2" value="food" >
+<label for="symptoms2"> Inappropriate food consumption</label><br>
+<input type="checkbox" name="symptoms3" value="sleep" >
+<label for="symptoms3"> Oversleeping or not sleeping enough</label><br>
+<input type="checkbox" name="symptoms4" value="happiness" >
+<label for="symptoms4"> Forced happiness</label><br>
+<input type="checkbox" name="symptoms4" value="happiness" >
+<label for="symptoms4"> Fatigue </label><br>
+<input type="checkbox" name="symptoms5" value="Fatigue" >
+<label for="symptoms5"> Fatigue </label><br>
+<input type="checkbox" name="symptoms6" value="consentration" >
+<label for="symptoms6"> Hard time to consentrate on the task </label><br>
+<input type="checkbox" name="symptoms7" value="Angrer" >
+<label for="symptoms7"> Angry or irritable </label><br>
+<input type="checkbox" name="symptoms8" value="drugs" >
+<label for="symptoms8"> Use of drugs and alcohol </label><br>
+<input type="checkbox" name="symptoms9" value="suicide" >
+<label for="symptoms9"> Having thoughts of killing or harming yourself </label><br>
     
 If you experience at list three of those symptomps you are probably dealing with depression. This is a very seriouse 
 </div>
