--- a/src/depression_coping_methods.html
+++ b/src/depression_coping_methods.html
@@ -9,7 +9,7 @@ body, html {
 
 .parallax {
   /* The image used */
-  background-image: url(/Users/annanikitina/Desktop/d.jpeg);
+  background-image: url(d.jpeg);
 
   /* Full height */
   height: 70%; 
