--- a/src/depression_coping_methods.html
+++ b/src/depression_coping_methods.html
@@ -2,31 +2,35 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <title>Depression Coping Methods</title>
   <style>
-    body,
+    /* body,
     html {
       height: 100%;
-    }
+    } */
 
-    .parallax {
+    /* .parallax {
       /* The image used */
-      background-image: url(d.jpeg);
+      /* background-image: url(d.jpeg); */
 
       /* Full height */
-      height: 70%;
+      /* height: 70%; */
 
       /* Create the parallax scrolling effect */
-      background-attachment: fixed;
+      /* background-attachment: fixed;
       background-position: center;
       background-repeat: no-repeat;
-      background-size: cover;
-    }
+      background-size: cover; */
+    /* } */
 
-    .button1 {
-      background-image: linear-gradient(to right, #ff0000, #ffff00);
+    /* .button1 {
+      background-image: linear-gradient(to right, #ff0000, #ffff00); */
       /* Green */
-      border: none;
+      /* border: none;
       color: white;
       padding: 100px;
       text-align: right;
@@ -35,9 +39,9 @@
       font-size: 16px;
       margin: 10px 10px;
       cursor: pointer;
-    }
+    } */
 
-    .button1 {
+    /* .button1 {
       border-radius: 40%;
     }
 
@@ -48,7 +52,7 @@
     .button2 {
       background-image: linear-gradient(to right, #ff0000, #ffff00);
       /* Green */
-      border: none;
+      /* border: none;
       color: white;
       padding: 100px;
       text-align: right;
@@ -57,20 +61,20 @@
       font-size: 16px;
       margin: 10px 10px;
       cursor: pointer;
-    }
+    } */
 
-    .button2 {
+    /* .button2 {
       border-radius: 40%;
     }
 
     .button2:hover {
       box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
-    }
+    } */
 
-    .button3 {
-      background-image: linear-gradient(to right, #ff0000, #ffff00);
+    /* .button3 {
+      background-image: linear-gradient(to right, #ff0000, #ffff00); */
       /* Green */
-      border: none;
+      /* border: none;
       color: white;
       padding: 100px;
       text-align: right;
@@ -79,20 +83,20 @@
       font-size: 16px;
       margin: 10px 10px;
       cursor: pointer;
-    }
+    } */
 
-    .button3 {
+    /* .button3 {
       border-radius: 40%;
-    }
+    } */
 
-    .button3:hover {
+    /* .button3:hover {
       box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
-    }
+    } */
 
-    .button4 {
-      background-image: linear-gradient(to right, #ff0000, #ffff00);
+    /* .button4 {
+      background-image: linear-gradient(to right, #ff0000, #ffff00); */
       /* Green */
-      border: none;
+      /* border: none;
       color: white;
       padding: 100px;
       text-align: right;
@@ -101,20 +105,20 @@
       font-size: 16px;
       margin: 10px 10px;
       cursor: pointer;
-    }
+    } */
 
-    .button4 {
+    /* .button4 {
       border-radius: 40%;
     }
 
     .button4:hover {
       box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
-    }
+    } */
 
-    .button5 {
-      background-image: linear-gradient(to right, #ff0000, #ffff00);
+    /* .button5 {
+      background-image: linear-gradient(to right, #ff0000, #ffff00); */
       /* Green */
-      border: none;
+      /* border: none;
       color: white;
       padding: 100px;
       text-align: right;
@@ -123,86 +127,112 @@
       font-size: 16px;
       margin: 10px 10px;
       cursor: pointer;
-    }
+    } */
 
-    .button5 {
+    /* .button5 {
       border-radius: 40%;
-    }
+    } */
 
-    .button5:hover {
+    /* .button5:hover {
       box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    }*/
+    #calming-trees {
+      max-width: 100%;
     }
   </style>
 </head>
-<body>
-  <div style="height:100px; background-image: linear-gradient(to right,#ABFFE7,#B4FFAB); font-style:italic; color: white; text-shadow: 2px 2px 4px #000000; line-height: 2.0; text-align: center; font-size:25px">
-    <p>Welcome to the page where you can find an information on how to cope with signs of depression. Here you can also
-      find "Depression Hotline Numbers" Alright, take a deep breath and let's go!!!!</p>
-  </div>
-  <div class="parallax"></div>
 
-  <div style="height:1600px;background-image: linear-gradient(to right,#ABFFE7,#B4FFAB) ;font-size:36px">
-    <p>
-      A lot of people in this world suffer from depression symptoms. However sometimes it is hard to identify the
-      signs.Check the boxex bellow to see what you have bee recently experiensing. Ask yourself, do you feel any of the
-      following:
-    </p>
-    <input type="checkbox" name="symptoms0" value="mood">
-    <label for="symptoms0">Mood swings </label><br>
-    <input type="checkbox" name="symptoms2" value="food">
-    <label for="symptoms2"> Inappropriate food consumption</label><br>
-    <input type="checkbox" name="symptoms3" value="sleep">
-    <label for="symptoms3"> Oversleeping or not sleeping enough</label><br>
-    <input type="checkbox" name="symptoms4" value="happiness">
-    <label for="symptoms4"> Forced happiness</label><br>
-    <input type="checkbox" name="symptoms4" value="happiness">
-    <label for="symptoms4"> Fatigue </label><br>
-    <input type="checkbox" name="symptoms5" value="Fatigue">
-    <label for="symptoms5"> Fatigue </label><br>
-    <input type="checkbox" name="symptoms6" value="consentration">
-    <label for="symptoms6"> Hard time to consentrate on the task </label><br>
-    <input type="checkbox" name="symptoms7" value="Angrer">
-    <label for="symptoms7"> Angry or irritable </label><br>
-    <input type="checkbox" name="symptoms8" value="drugs">
-    <label for="symptoms8"> Use of drugs and alcohol </label><br>
-    <input type="checkbox" name="symptoms9" value="suicide">
-    <label for="symptoms9"> Having thoughts of killing or harming yourself </label><br>
-    <p>
-      If you are experiencing any of those symptoms, that means you need some help.
-      There are a list of coping skills and methods you can do. Click on any of them to find out more.
-    </p>
-    <a href="https://www.youtube.com/watch?v=1ZYbU82GVz4"><button class="button1">Meditation music</button></a>
-    <a href="https://www.youtube.com/watch?v=DGz11InwgO8"><button class="button2">Meditation to Treat
-        Depression</button></a>
-    <a href="https://www.youtube.com/watch?v=inpok4MKVLM"><button class="button3">Meditation You Can Do
-        Anywhere</button></a>
-    <a href="https://www.youtube.com/watch?v=d-KwioAfZEc"><button class="button4">Five senses mindfulness
-        (Audio)</button></a>
-    <a href="https://www.youtube.com/watch?v=jpqV3dzYOgk"><button class="button4">Happy song!!!</button></a>
-    <a href="https://www.youtube.com/watch?v=huBsOiqvORU"><button class="button5">LIFE IS WORTH LIVING!</button></a>
-    <p>
-      Those are some of the coping skills you can use when you feel upset, nervous or depressed! If you feel that
-      those methods did not help here is a list of hotlines:
-    </p>
-    <ul>
-      <li>
-        National Suicide Prevention Lifeline (you can reach them even if not in suicide risk) Call 1-800-273-8255
-      </li>
-      <li>
-        Available 24 hours every day or chart at https://suicidepreventionlifeline.org/chat/ <br> <br>
-      </li>
-      <li>
-        Crisis text line (text CONNECT to 741741). https://www.crisistextline.org/ <br> <br>
-      </li>
-      <li>
-        Samaritans You can call or text the Samaritans at any time: (877) 870-4673 (HOPE). https://www.samaritans.org/
-      </li>
-    </ul>
-    <font color="black">
-      <center>Thank you for visiting this page, hope you found it helpful!!!!</center>
-    </font>
+<body>
+  <div class="container">
+    <article class="depression_coping_methods">
+      <div class="jumbotron">
+        <header>
+        <h1>Depression Coping Methods</h1>
+      </header>
+      <div>
+        <p>Welcome to the page where you can find an information on how to cope with signs of depression. Here you can
+          also
+          find "Depression Hotline Numbers" Alright, take a deep breath and let's go!!!!</p>
+      </div>
+      </div>
+      <img src="d.jpeg" class="rounded" id="calming-trees">
+      <div>
+        <p>
+          A lot of people in this world suffer from depression symptoms. However sometimes it is hard to identify the
+          signs.Check the boxex bellow to see what you have bee recently experiensing. Ask yourself, do you feel any of
+          the
+          following:
+        </p>
+        <input type="checkbox" name="symptoms0" value="mood">
+        <label for="symptoms0">Mood swings </label><br>
+        <input type="checkbox" name="symptoms2" value="food">
+        <label for="symptoms2"> Inappropriate food consumption</label><br>
+        <input type="checkbox" name="symptoms3" value="sleep">
+        <label for="symptoms3"> Oversleeping or not sleeping enough</label><br>
+        <input type="checkbox" name="symptoms4" value="happiness">
+        <label for="symptoms4"> Forced happiness</label><br>
+        <input type="checkbox" name="symptoms4" value="happiness">
+        <label for="symptoms4"> Fatigue </label><br>
+        <input type="checkbox" name="symptoms5" value="Fatigue">
+        <label for="symptoms5"> Fatigue </label><br>
+        <input type="checkbox" name="symptoms6" value="consentration">
+        <label for="symptoms6"> Hard time to consentrate on the task </label><br>
+        <input type="checkbox" name="symptoms7" value="Angrer">
+        <label for="symptoms7"> Angry or irritable </label><br>
+        <input type="checkbox" name="symptoms8" value="drugs">
+        <label for="symptoms8"> Use of drugs and alcohol </label><br>
+        <input type="checkbox" name="symptoms9" value="suicide">
+        <label for="symptoms9"> Having thoughts of killing or harming yourself </label><br>
+        <p>
+          If you are experiencing any of those symptoms, that means you need some help.
+          There are a list of coping skills and methods you can do. Click on any of them to find out more.
+        </p>
+        <a href="https://www.youtube.com/watch?v=1ZYbU82GVz4"><button type="button" class="btn btn-success">Meditation music</button></a>
+        <a href="https://www.youtube.com/watch?v=DGz11InwgO8"><button type="button" class="btn btn-success"">Meditation to Treat
+            Depression</button></a>
+        <a href="https://www.youtube.com/watch?v=inpok4MKVLM"><button type="button" class="btn btn-success">Meditation You Can Do
+            Anywhere</button></a>
+        <a href="https://www.youtube.com/watch?v=d-KwioAfZEc"><button type="button" class="btn btn-success">Five senses mindfulness
+            (Audio)</button></a>
+        <a href="https://www.youtube.com/watch?v=jpqV3dzYOgk"><button type="button" class="btn btn-success">Happy song!!!</button></a>
+        <a href="https://www.youtube.com/watch?v=huBsOiqvORU"><button type="button" class="btn btn-success">LIFE IS WORTH LIVING!</button></a>
+        <p>
+          Those are some of the coping skills you can use when you feel upset, nervous or depressed! If you feel that
+          those methods did not help here is a list of hotlines:
+        </p>
+        <ul>
+          <li>
+            National Suicide Prevention Lifeline (you can reach them even if not in suicide risk) Call 1-800-273-8255
+          </li>
+          <li>
+            Available 24 hours every day or chart at https://suicidepreventionlifeline.org/chat/
+          </li>
+          <li>
+            Crisis text line (text CONNECT to 741741). https://www.crisistextline.org/ 
+          </li>
+          <li>
+            Samaritans You can call or text the Samaritans at any time: (877) 870-4673 (HOPE).
+            https://www.samaritans.org/
+          </li>
+        </ul>
+        <font color="black">
+          <center>Thank you for visiting this page, hope you found it helpful!!!!</center>
+        </font>
+      </div>
+    </article>
+
   </div>
-  <div class="parallax"></div>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
