--- a/src/topics.html
+++ b/src/topics.html
@@ -1,17 +1,40 @@
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Index of Topics | Mental Health Website</title>
-    </head>
-    <body>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Index of Topics | Mental Health Website</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class="container">
         <article>
             <nav>
-                <a href="index.html">Home</a>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="#">Mental Health Website</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                    </div>
+                </nav>
+
             </nav>
-            <header>
-                <h1>Index of Topics</h1>
-                <hr>
-            </header> 
+            <div class="jumbotron">
+                <header>
+                    <h1>Index of Topics</h1>
+                </header>
+            </div>
+
             <section>
                 <section>
                     <h2>Coping Methods</h2>
@@ -22,19 +45,30 @@
                 </section>
                 <section>
                     <section>
-                    <h2>General Information</h2>
-                    <ul>
-                        <li><a href="anxiety_info.html">Anxiety Information</a></li>
-                    </ul>
+                        <h2>General Information</h2>
+                        <ul>
+                            <li><a href="anxiety_info.html">Anxiety Information</a></li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>De-Stress/Relax</h2>
+                        <ul>
+                            <li><a href="remaining_calm.html">Remaining Calm</a></li>
+                            <li><a href="relaxation_activities.html">Relaxation Activities</a></li>
+                        </ul>
+                    </section>
                 </section>
-                <section>
-                    <h2>De-Stress/Relax</h2>
-                    <ul>
-                        <li><a href="remaining_calm.html">Remaining Calm</a></li>
-                        <li><a href="relaxation_activities.html">Relaxation Activities</a></li>
-                    </ul> 
-                </section>
-            </section>
         </article>
-    </body>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
