script and container class added

--- a/src/remaining_calm.html
+++ b/src/remaining_calm.html
@@ -24,49 +24,62 @@
                     </div>
                 </nav>
             </nav>
-            <header>
-                <h1>Remaining Calm</h1>
-            </header>
-            <section>
-                <p>
-                    Everyone faces pressure from time to time. In those moments of intense pressure, it's
-                    important not to succumb under pressure but rather to rise above it. 
-                </p>
-                <p>
-                    We've accumulated some tips to help you the next time you face pressure.
-                </p>
-                <ul>
-                    <li>Try Deep Breathing! - Take 5 deep breaths, in and out.</li>
-                    <li>
-                        Visualization - Imagine the stress flowing out of your body, and relaxation flowing in.
-                    </li>
-                    <li>
-                        Control - Focus on what you can control. You can't control outside forces, but you can 
-                        control yourself.
-                    </li>
-                    <li>
-                        Perspective - It's important to put things in perspective. Will this matter in 10 years?
-                        Will it matter in 20? How about 30? Try to see where things fit in the grand scheme of 
-                        things.
-                    </li>
-                    <li>
-                        Labeling - Try labeling your emotions! Instead of using generic terms like angry or sad,
-                        try to be more positive. For example:
-                        <ul>
-                            <li>Nervous => Excited</li>
-                            <li>Worried => Concerned</li>
-                            <li>Angry => Energetic (in a different way)</li>
-                        </ul>
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <h4>Sources</h4>
-                <ui>
-                    <li><a href="https://www.lifehack.org/articles/lifestyle/8-ways-stay-calm-and-cool-how-more-patient-and-less-stressed.html">How to Stay Calm and Cool When You Are Extremely Stressed</a> - Lifehack</ul>
-                    <li><a href="https://www.inc.com/geoffrey-james/use-neuroscience-to-remain-calm-under-pressure.html">Use Neuroscience to Remain Calm Under Pressure</a> - INC.</li>
-                </ul>
-            </section>
-        </article>
+            <div class = "container"><div class = "jumbotron">
+                <header>
+                    <h1>Remaining Calm</h1>
+                </header>
+                <section>
+                    <p>
+                        Everyone faces pressure from time to time. In those moments of intense pressure, it's
+                        important not to succumb under pressure but rather to rise above it. 
+                    </p>
+                    <p>
+                        We've accumulated some tips to help you the next time you face pressure.
+                    </p>
+                    <ul>
+                        <li>Try Deep Breathing! - Take 5 deep breaths, in and out.</li>
+                        <li>
+                            Visualization - Imagine the stress flowing out of your body, and relaxation flowing in.
+                        </li>
+                        <li>
+                            Control - Focus on what you can control. You can't control outside forces, but you can 
+                            control yourself.
+                        </li>
+                        <li>
+                            Perspective - It's important to put things in perspective. Will this matter in 10 years?
+                            Will it matter in 20? How about 30? Try to see where things fit in the grand scheme of 
+                            things.
+                        </li>
+                        <li>
+                            Labeling - Try labeling your emotions! Instead of using generic terms like angry or sad,
+                            try to be more positive. For example:
+                            <ul>
+                                <li>Nervous => Excited</li>
+                                <li>Worried => Concerned</li>
+                                <li>Angry => Energetic (in a different way)</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Sources</h4>
+                    <ui>
+                        <li><a href="https://www.lifehack.org/articles/lifestyle/8-ways-stay-calm-and-cool-how-more-patient-and-less-stressed.html">How to Stay Calm and Cool When You Are Extremely Stressed</a> - Lifehack</ul>
+                        <li><a href="https://www.inc.com/geoffrey-james/use-neuroscience-to-remain-calm-under-pressure.html">Use Neuroscience to Remain Calm Under Pressure</a> - INC.</li>
+                    </ul>
+                </section>
+            </article>
+
+            </div></div>
+            
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
     </body>
 </html>
