--- a/src/Eating_Disorders.html
+++ b/src/Eating_Disorders.html
@@ -2,75 +2,89 @@
 <html>
 
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <title>Eating Disorders</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
+
 <body>
   <nav>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Ease</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+      <a class="navbar-brand" href="index.html">Ease</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-                </li>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+          </li>
+      </div>
     </nav>
-</nav>
-  <h1>Eating Disorders</h1>
-  <p>
-    Eating disorders are very common, especially among the younger generation. There could be many reasons for eating
-    disorders. On this page you can find some resources and information about these disorders. 
-    <a href="https://www.youtube.com/watch?v=-nDEvbj6Dr0">Here</a> 
-    you can watch a video about Anorexia Nervosa, Bulimia, and Binge Eating Disorder.
-  </p>
-  <p>There are a lot of eating disorders. In this section, we will review only some of them. You will find a lot of
-    links to the resources where you can find out more. </p>
-  <h2>List of Eating Disorders</h2>
-  <ul style="list-style-type:disc;">
-    <li>Anorexia nervosa</li>
-    <li>Bulimia nervosa</li>
-    <li>Binge eating disorder</li>
-    <li>Pica</li>
-    <li>Rumination disorder</li>
-    <li>Avoidant/restrictive food intake disorder</li>
-  </ul>
-  <p> If you want to find out more about any of the disorders listed above, you can visit a following 
-    <a href="https://www.healthline.com/nutrition/common-eating-disorders#other">website</a>.
-  </p>
-  <p>
-    There are multiple reasons for different eating disorders. It can be genetics, imbalance in hormones, nutritional
-    deficiencies. It also can include low self-esteem and negative body image. Please visit this <a
-      href="https://www.eatingdisorderhope.com/information/eating-disorder">website</a> to find out more.
-  </p>
-  <h3>Treatment</h3>
-  <ul style="list-style-type:square;">
-    <li>Healthy eating</li>
-    <li>Psychotherapy</li>
-    <li>Hospitalization</li>
-  </ul>
-  <p>
-    For more information visit 
-    <a href="https://www.mayoclinic.org/diseases-conditions/eating-disorders/diagnosis-treatment/drc-20353609">
-      Mayo Clinic website
-    </a>
-  </p>
-  <p>
-    If you have eating disorder, there is help. You can contact hotline or crisis center. Below you will find some
-    information.
-  </p>
-  <p>
-    NATIONAL EATING DISORDERS HELPLINE <br>
-    Toll-Free Phone Number: 1-800-931-2237<br>
-    Hours: 9:00 AM - 9:00 PM (ET) Mon-Thurs; and 9:00 AM to 5:00 PM (ET) Fri<br>
-    For 24/7 crisis support, text 'NEDA' to 741741
-  </p>
+  </nav>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Eating Disorders</h1>
+    </div>
+    <p>
+      Eating disorders are very common, especially among the younger generation. There could be many reasons for eating
+      disorders. On this page you can find some resources and information about these disorders.
+      <a href="https://www.youtube.com/watch?v=-nDEvbj6Dr0">Here</a>
+      you can watch a video about Anorexia Nervosa, Bulimia, and Binge Eating Disorder.
+    </p>
+    <p>There are a lot of eating disorders. In this section, we will review only some of them. You will find a lot of
+      links to the resources where you can find out more. </p>
+    <h2>List of Eating Disorders</h2>
+    <ul style="list-style-type:disc;">
+      <li>Anorexia nervosa</li>
+      <li>Bulimia nervosa</li>
+      <li>Binge eating disorder</li>
+      <li>Pica</li>
+      <li>Rumination disorder</li>
+      <li>Avoidant/restrictive food intake disorder</li>
+    </ul>
+    <p> If you want to find out more about any of the disorders listed above, you can visit a following
+      <a href="https://www.healthline.com/nutrition/common-eating-disorders#other">website</a>.
+    </p>
+    <p>
+      There are multiple reasons for different eating disorders. It can be genetics, imbalance in hormones, nutritional
+      deficiencies. It also can include low self-esteem and negative body image. Please visit this <a
+        href="https://www.eatingdisorderhope.com/information/eating-disorder">website</a> to find out more.
+    </p>
+    <h3>Treatment</h3>
+    <ul style="list-style-type:square;">
+      <li>Healthy eating</li>
+      <li>Psychotherapy</li>
+      <li>Hospitalization</li>
+    </ul>
+    <p>
+      For more information visit
+      <a href="https://www.mayoclinic.org/diseases-conditions/eating-disorders/diagnosis-treatment/drc-20353609">
+        Mayo Clinic website
+      </a>
+    </p>
+    <p>
+      If you have eating disorder, there is help. You can contact hotline or crisis center. Below you will find some
+      information.
+    </p>
+    <p>
+      NATIONAL EATING DISORDERS HELPLINE <br>
+      Toll-Free Phone Number: 1-800-931-2237<br>
+      Hours: 9:00 AM - 9:00 PM (ET) Mon-Thurs; and 9:00 AM to 5:00 PM (ET) Fri<br>
+      For 24/7 crisis support, text 'NEDA' to 741741
+    </p>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 </html>
