--- a/src/anxiety_coping_methods.html
+++ b/src/anxiety_coping_methods.html
@@ -23,74 +23,87 @@
                     </div>
                 </nav>
             </nav>
-            <header><h1>Anxiety Coping Methods</h1></header>
-            <section>
-                <ul>
-                    <li>
-                        Question your thoughts - Negative thoughts or thought 
-                        distortions are common in people suffering from anxiety. 
-                    </li>
-                    <li>
-                        Deep Breating - Try 
-                        <a href="https://www.healthline.com/health/box-breathing">
-                            box breathing!
-                        </a> 
-                        Take one breath for 4 counts. Hold your breath. 
-                        Then breathe out for 4 counts.
-                    </li>
-                    <li>
-                        Write down your thoughts - Writing down how you feel in a
-                        journal is a good way to let loose and get out of your head.
-                    </li>
-                    <li>
-                        Focus on what you can control - There are somethings in life
-                        that you simply can't control. Whether it be an unexpected circumstance or
-                        something that someone said. Accept that you can ultimately only control yourself.
-                    </li>
-                    <li>
-                        Grounding - Focus on one inanimate immovable object, such as a wall, clock, or photo.
-                        Concentrate only on that object for 10 seconds. Then do it again but for 9 seconds.
-                        Then again for 8 seconds, then 7 seconds, until you reach 1 second. There are a lot more
-                        <a href="https://www.healthline.com/health/grounding-techniques">grounding techniques</a>
-                        you can try.
-                    </li>
-                    <li>
-                        Think positive - In our world of constant stress and external pressures, it can be easy
-                        to dwell on past failures or regret on what could have happened. Instead of having a
-                        pessimistic view on life, try to think about the bright side! Instead of a challenge,
-                        think of an oppurtunity.
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <h4>Sources</h4>
-                <ul>
-                    <li>
-                        <a href="https://www.healthline.com/health/mental-health/how-to-cope-with-anxiety#quick-coping-methods">
-                            Do You Live with Anxiety? Here Are 11 Ways to Cope 
-                        </a>
-                        - Healthline
-                    </li>
-                    <li>
-                        <a href="https://adaa.org/tips-manage-anxiety-and-stress">
-                            Tips to Manage Anxiety and Stress
-                        </a> 
-                        - Anxiety and Depression Association of America
-                    </li>
-                    <li>
-                        <a href="https://www.healthline.com/health/grounding-techniques">
-                            30 Grounding Techniques to Quiet Distressing Thoughts
-                        </a>
-                        - Healthline
-                    </li>
-                    <li>
-                        <a href="https://www.amazon.com/Coping-Anxiety-Simple-Relieve-Worry/dp/1572243201/ref=sr_1_6?keywords=coping+with+anxiety&qid=1580875083&sr=8-6">
-                            Coping with Anxiety
-                        </a>
-                        - Dr. Edmund Bourne, Ph.D
-                    </li>
-                </ul>
-            </section>
-        </article>
+            <div class = "container"><div class = "jumbotron">
+                <header><h1>Anxiety Coping Methods</h1></header>
+                <section>
+                    <ul>
+                        <li>
+                            Question your thoughts - Negative thoughts or thought 
+                            distortions are common in people suffering from anxiety. 
+                        </li>
+                        <li>
+                            Deep Breating - Try 
+                            <a href="https://www.healthline.com/health/box-breathing">
+                                box breathing!
+                            </a> 
+                            Take one breath for 4 counts. Hold your breath. 
+                            Then breathe out for 4 counts.
+                        </li>
+                        <li>
+                            Write down your thoughts - Writing down how you feel in a
+                            journal is a good way to let loose and get out of your head.
+                        </li>
+                        <li>
+                            Focus on what you can control - There are somethings in life
+                            that you simply can't control. Whether it be an unexpected circumstance or
+                            something that someone said. Accept that you can ultimately only control yourself.
+                        </li>
+                        <li>
+                            Grounding - Focus on one inanimate immovable object, such as a wall, clock, or photo.
+                            Concentrate only on that object for 10 seconds. Then do it again but for 9 seconds.
+                            Then again for 8 seconds, then 7 seconds, until you reach 1 second. There are a lot more
+                            <a href="https://www.healthline.com/health/grounding-techniques">grounding techniques</a>
+                            you can try.
+                        </li>
+                        <li>
+                            Think positive - In our world of constant stress and external pressures, it can be easy
+                            to dwell on past failures or regret on what could have happened. Instead of having a
+                            pessimistic view on life, try to think about the bright side! Instead of a challenge,
+                            think of an oppurtunity.
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Sources</h4>
+                    <ul>
+                        <li>
+                            <a href="https://www.healthline.com/health/mental-health/how-to-cope-with-anxiety#quick-coping-methods">
+                                Do You Live with Anxiety? Here Are 11 Ways to Cope 
+                            </a>
+                            - Healthline
+                        </li>
+                        <li>
+                            <a href="https://adaa.org/tips-manage-anxiety-and-stress">
+                                Tips to Manage Anxiety and Stress
+                            </a> 
+                            - Anxiety and Depression Association of America
+                        </li>
+                        <li>
+                            <a href="https://www.healthline.com/health/grounding-techniques">
+                                30 Grounding Techniques to Quiet Distressing Thoughts
+                            </a>
+                            - Healthline
+                        </li>
+                        <li>
+                            <a href="https://www.amazon.com/Coping-Anxiety-Simple-Relieve-Worry/dp/1572243201/ref=sr_1_6?keywords=coping+with+anxiety&qid=1580875083&sr=8-6">
+                                Coping with Anxiety
+                            </a>
+                            - Dr. Edmund Bourne, Ph.D
+                        </li>
+                    </ul>
+                </section>
+            </article>
+
+            </div></div>
+            
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
     </body>
 </html>
