--- a/src/personality_disorders.html
+++ b/src/personality_disorders.html
@@ -23,7 +23,10 @@
         </div>
     </nav>
 </nav>
-<h1>Personality Disorders</h1>
+<div class="container">
+
+<div class = "jumbotron">
+  <h1>Personality Disorders</h1>
 
 <p>There are a lot of personality disorders. In this section, we will review only some of them. You will find a lot of links to the resources where you can find out more. </p>
     
@@ -80,5 +83,19 @@
     <p><center>Thank you your visit, hope you have a wonderful day!!!! </center>
     
     </p>
+</div>
+</div>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
+
+<div class = "container"><div class = "jumbotron"></div></div>
