--- a/src/relaxation_activities.html
+++ b/src/relaxation_activities.html
@@ -24,51 +24,64 @@
                     </div>
                 </nav>
             </nav>
-            <header>
-                <h1>Relaxation Activities</h1>
-            </header>
-            <section>
-                <ul>
-                    <li>
-                        Listen to relaxing music - Listening to the right kind of 
-                        music can help calm you down and destress.
-                    </li>
-                    <li>
-                        Meditate - Meditation can help you become more mindful along
-                        with being a healthy relaxation activity. There are numerous
-                        <a href="https://www.healthline.com/nutrition/12-benefits-of-meditation">
-                            benefits
-                        </a> to meditation.
-                    </li>
-                    <li>
-                        Spend time with a pet - Spending time with a pet can be
-                        very relaxing. Research has backed this up as well.
-                    </li>
-                    <li>
-                        Pray - If you are religious, saying a repetitive prayer
-                        can help clear up your mind and provide focus. Even if
-                        you're not religious, repeating a positive affirmation
-                        instead of a prayer can work too.
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <h4>Sources</h4>
-                <ul>
-                    <li>
-                        <a href="https://www.outofstress.com/things-stress-relief/">
-                            72 Fun Activities To Relax and De-Stress
-                        </a>
-                        - outofstress.com
-                    </li>
-                    <li>
-                        <a href="https://www.health.harvard.edu/mind-and-mood/six-relaxation-techniques-to-reduce-stress">
-                            Six relaxation techniques to reduce stress
-                        </a>
-                        - Harvard Health Publishing
-                    </li>
-                </ul>
-            </section>
-        </article>
+            <div class="container"><div class="jumbotron"> 
+                <header>
+                    <h1>Relaxation Activities</h1>
+                </header>
+                <section>
+                    <ul>
+                        <li>
+                            Listen to relaxing music - Listening to the right kind of 
+                            music can help calm you down and destress.
+                        </li>
+                        <li>
+                            Meditate - Meditation can help you become more mindful along
+                            with being a healthy relaxation activity. There are numerous
+                            <a href="https://www.healthline.com/nutrition/12-benefits-of-meditation">
+                                benefits
+                            </a> to meditation.
+                        </li>
+                        <li>
+                            Spend time with a pet - Spending time with a pet can be
+                            very relaxing. Research has backed this up as well.
+                        </li>
+                        <li>
+                            Pray - If you are religious, saying a repetitive prayer
+                            can help clear up your mind and provide focus. Even if
+                            you're not religious, repeating a positive affirmation
+                            instead of a prayer can work too.
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Sources</h4>
+                    <ul>
+                        <li>
+                            <a href="https://www.outofstress.com/things-stress-relief/">
+                                72 Fun Activities To Relax and De-Stress
+                            </a>
+                            - outofstress.com
+                        </li>
+                        <li>
+                            <a href="https://www.health.harvard.edu/mind-and-mood/six-relaxation-techniques-to-reduce-stress">
+                                Six relaxation techniques to reduce stress
+                            </a>
+                            - Harvard Health Publishing
+                        </li>
+                    </ul>
+                </section>
+            </article>
+            
+            </div></div>
+            
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
     </body>
 </html>
