made according changes to div tag

--- a/src/anxiety_info.html
+++ b/src/anxiety_info.html
@@ -23,53 +23,57 @@
                     </div>
                 </nav>
             </nav>
-            <header>
-                <h1>Anxiety Information</h1>
-            </header>
-            <section>
-            <h2>Overview</h2>
-                <p> 
-                    The American Psychiatric Association (APA) defines anxiety as "an emotion
-                    characterized by feelings of tension, worried thoughts, and physical
-                    changes." 
-                </p>
-                <p>
-                    It's completely natural to feel anxiety from time to time, we all get
-                    anxious at some point! However, when anxiety starts interfering with
-                    other parts of your life, such as work, school, or relationships, that's
-                    when it becomes a problem. 
-                </p>
-                <p>
-                    For someone with an anxiety disorder, anxiety is a debilitating part 
-                    of everyday life. As the National Institute of Mental Health (NIMH) puts it:
-                    "the anxiety does not go away and can get worse over time".
-                </p>
-                <p>
-                    People with anxiety disorders may have thought distortions or
-                    intrusive thoughts of constant worry. The APA says: "They may also avoid certain situations
-                    out of worry." Physical symptoms such as a rapid heartbeat, sweating,
-                    shaking, or dizziness are common.
-                </p>
-            </section>
-            <section>
-                <h2>List of Anxiety Disorders</h2>
-                <ul>
-                    <li>Generalized Anxiety Disorder</li>
-                    <li>Obsessive Compulsive Disorder (OCD)</li>
-                    <li>Panic Disorder</li>
-                    <li>Post Traumatic Stress Disorder (PTSD)</li>
-                    <li>Social Anxiety Disorder</li>
-                </ul>
-            </section>
-            <section>
-                <h4>Sources</h4>
-                <ul>
-                    <li><a href="https://www.apa.org/topics/anxiety/">Anxiety</a> - American Psychiatric Association</li>
-                    <li><a href="https://www.nimh.nih.gov/health/topics/anxiety-disorders/index.shtml">Anxiety Disorders</a> - National Institue of Mental Health</li>
-                    <li><a href="https://www.hhs.gov/answers/mental-health-and-substance-abuse/what-are-the-five-major-types-of-anxiety-disorders/index.html">What are the five major types of anxiety disorders?</a> - U.S. Department of Health and Human Services</li>
-                </ul>
-            </section>
-        </article>
+            <div class = "container"><div class = "jumbotron">
+
+                <header>
+                    <h1>Anxiety Information</h1>
+                </header>
+                <section>
+                <h2>Overview</h2>
+                    <p> 
+                        The American Psychiatric Association (APA) defines anxiety as "an emotion
+                        characterized by feelings of tension, worried thoughts, and physical
+                        changes." 
+                    </p>
+                    <p>
+                        It's completely natural to feel anxiety from time to time, we all get
+                        anxious at some point! However, when anxiety starts interfering with
+                        other parts of your life, such as work, school, or relationships, that's
+                        when it becomes a problem. 
+                    </p>
+                    <p>
+                        For someone with an anxiety disorder, anxiety is a debilitating part 
+                        of everyday life. As the National Institute of Mental Health (NIMH) puts it:
+                        "the anxiety does not go away and can get worse over time".
+                    </p>
+                    <p>
+                        People with anxiety disorders may have thought distortions or
+                        intrusive thoughts of constant worry. The APA says: "They may also avoid certain situations
+                        out of worry." Physical symptoms such as a rapid heartbeat, sweating,
+                        shaking, or dizziness are common.
+                    </p>
+                </section>
+                <section>
+                    <h2>List of Anxiety Disorders</h2>
+                    <ul>
+                        <li>Generalized Anxiety Disorder</li>
+                        <li>Obsessive Compulsive Disorder (OCD)</li>
+                        <li>Panic Disorder</li>
+                        <li>Post Traumatic Stress Disorder (PTSD)</li>
+                        <li>Social Anxiety Disorder</li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Sources</h4>
+                    <ul>
+                        <li><a href="https://www.apa.org/topics/anxiety/">Anxiety</a> - American Psychiatric Association</li>
+                        <li><a href="https://www.nimh.nih.gov/health/topics/anxiety-disorders/index.shtml">Anxiety Disorders</a> - National Institue of Mental Health</li>
+                        <li><a href="https://www.hhs.gov/answers/mental-health-and-substance-abuse/what-are-the-five-major-types-of-anxiety-disorders/index.html">What are the five major types of anxiety disorders?</a> - U.S. Department of Health and Human Services</li>
+                    </ul>
+                </section>
+            </article>
+            </div></div>
+            
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
